load("@rules_python//python:defs.bzl", "py_binary", "py_test")

# This rule modifies the source tree directly (requirements.txt.lock) and
# assumes 'uv' is available (via `pip install uv`) on the $PATH when run.
sh_binary(
    name = "update_lock",
    srcs = ["update_lock.sh"],
    # It needs access to requirements.txt as input.
    data = ["requirements.txt"],
)

OMNI_DEPS = [
    "@pypi_omni//omniverse_kit",
]

py_binary(
    name = "omni_bin",
    srcs = ["main.py"],
    main = "main.py",
    env = {
        "OMNI_KIT_ACCEPT_EULA": "YES",
    },
    deps = OMNI_DEPS,
)

py_test(
    name = "omni_test",
    srcs = ["main.py"],
    env = {
        "OMNI_KIT_ACCEPT_EULA": "YES",
    },
    deps = OMNI_DEPS,
)
